<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="24dp"
        android:layout_height="17dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/net"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/crime"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/namebox"
        android:layout_width="334dp"
        android:layout_height="55dp"
        android:layout_marginTop="236dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_corner"
        android:hint="@string/pass"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColorHint="#808080"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crime" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="27dp"
        android:layout_height="18dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="260dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/net"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crime"
        android:layout_width="84dp"
        android:layout_height="32dp"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/crime"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crime3"
        android:layout_width="68dp"
        android:layout_height="27dp"
        android:layout_marginTop="344dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/crime"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/rec"
        android:textColor="#ffffff"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crime" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="329dp"
        android:layout_height="23dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/wix_madefor_display"
        android:text="@string/recnotes2"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="36dp"
        android:layout_height="23dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/wix_madefor_display"
        android:text="@string/on"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/material_dynamic_neutral20"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namebox"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>